# spam

./: .gitignore  Cargo.toml  LICENSE  README.md  burnice.txt  test.json
spam/: .gitignore  Cargo.toml
spam/src/: lib.rs  main.rs
spam/src/artifacts/: config.txt  testcfg.txt
spam/src/config/: mod.rs
src/: lib.rs  main.rs
src/artifacts/: config.txt
