[package]
name = "spam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
dotenv_codegen = "0.15.0"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
